# NIM-CLI

./: .gitmodules  CMakeLists.txt  NIMCLI  README.md
include/: cligraphics.h
src/: CMakeLists.txt  cligraphics.cpp
